# CorangeTestGame

./: .gitignore  CMakeLists.txt
include/: animation_manager.h  character.h  coin.h  health_manager.h  level.h  platformer.h  turret.h
include/support/: extra_math.h  png_support.h  spng_helper.h  sprite_animation.h  sprite_sheet_support.h
levels/: demo.level
raw/tiles/: character_cover.aseprite  character_right.aseprite  character_walk.aseprite  character_walk.pngsprite  turret.aseprite  turret_cannon.aseprite  turret_shot.aseprite
src/: animation_manager.c  character.c  health_manager.c  level.c  platformer.c  turret.c
src/support/: extra_math.c  png_support.c  spng_helper.c  sprite_animation.c  sprite_sheet_support.c
tiles/: character_walk.32x64.pngsprite
